# AI

./: .gitignore  NLP.py  NLP_input.txt  README.md  Tasks.md  Tasks2.md  Tasks3.md  Tasks4.md  altered_text.txt  assistant_id.txt  classrooms.csv  classrooms.json  constraints.json  events.csv  format.py  main.py  output2.txt  output3.txt  prompt.py  pyproject.toml  staffmembers.csv  stylometric_analysis.txt  to_format.txt
algorithms/: arc.py  bkt.py
cli/: cli.py
inputs/example_bkt/: classrooms.json  constraints.json  events.json  output_expected.md  staff_members.json
inputs/example_cannot_generate/: events.json
inputs/example_create_error/: classrooms.json  events.json  staff_members.json
inputs/example_full/: classrooms.json  events.json  output_expected.md  staff_members.json
inputs/example_hard/: classrooms.json  constraints.json  events.json  output_expected.md  staff_members.json
inputs/example_not_enough_staff/: output_expected.md
inputs/example_small_sample/: events.json  output_expected.md  staff_members.json
inputs/example_too_many_groups/: constraints.json  events.json  output_expected.md  staff_members.json
inputs/example_validate_error/: classrooms.json  events.json  output_expected.md  staff_members.json
io_utils/: assistant_id.txt  constraints.json  format.py  generate_html.py  generating_data.py  output_file.py  parse_constraints.py  reading_bkt.py
models/: classroom.py  constants.py  course.py  event.py  events.py  staff_member.py  time_interval.py
outputs/: timetable_by_groups.html  to_format.txt
(+12 files in other folders)
