[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Paul <cirstean.paul.ioan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
returns= "0.23.0"
typing_extensions= "4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
