[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Paul <cirstean.paul.ioan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
returns= "0.23.0"
typing_extensions= "4.12.2"
icecream = "^2.1.3"
argparse = "^1.4.0"
argcomplete = "^3.5.1"
numpy = "^2.1.3"
bs4 = "^0.0.2"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
